# 5sem_fp

./: README.md  dune  dune-project  lab1.opam
lab1/: .gitignore  README.md  dune  lab1.opam
lab1/.github/workflows/: lab1.yml
lab1/task28/: cycle_t28.ml  dune  inf_loop.ml  inf_loop_t28.ml  map_version.ml  module_realisation_t28.ml  recursion_t28.ml  solve.c  tail_recursion_t28.ml
lab1/task3/: cycle.ml  dune  inf_loop.ml  inf_loop_t3.ml  map_version.ml  module_realisation_t3.ml  recursion_t3.ml  solve.c  tail_recursion_t3.ml
lab1/test/: dune  test_runner.ml
