opam-version: "2.0"
synopsis: "Solutions for tasks 3 and 28 from Project Euler"
description: "blablalleedf"
maintainer: ["gorkov-00-00@mail.ru"]
authors: ["Yarik"]
license: "MIT"
homepage: "https://github.com/SkreckOne/5sem_fp"
bug-reports: "https://github.com/SkreckOne/5sem_fp/issues"
depends: [
  "ocaml"
  "dune" {>= "3.20.2"}
  "ocamlformat" {= "0.27.0"}
  "alcotest" {with-test} 
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
  ]
]