(library
 (name task28_lib)
 (modules
  cycle_t28
  inf_loop_t28
  map_version_t28
  module_realisation_t28
  recursion_t28
  tail_recursion_t28))

; (executable
;  (name cycle_t28)
;  (libraries task28_lib))

; (executable
;  (name inf_loop_t28)
;  (libraries task28_lib))

; (executable
;  (name map_version_t28)
;  (libraries task28_lib))

; (executable
;  (name module_realisation_t28)
;  (libraries task28_lib))

; (executable
;  (name recursion_t28)
;  (libraries task28_lib))

; (executable
;  (name tail_recursion_t28)
;  (libraries task28_lib))
